[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
chrono-tz = "0.9"

ndarray = "0.15"
csv = "1.3"
rand = "0.8"

[[bin]]
name = "spammer"
path = "src/spammer.rs"

[[bin]]
name = "report"
path = "src/report.rs"
 